--- a/auth/package.json
+++ b/auth/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "lint": "eslint src/**/*.ts",
     "prettier": "prettier  --check .src/**/*.ts",
-    "prettier:fix":"pretteir --write ./src/**/*.ts",
+    "prettier:fix": "pretteir --write ./src/**/*.ts",
     "build": "npx tsc",
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
@@ -36,7 +36,6 @@
     "eslint-plugin-import": "^2.29.1",
     "jest": "^29.7.0",
     "nodemon": "^3.1.0",
-    "prettier": "3.2.5",
     "supertest": "^6.3.4",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
@@ -44,10 +43,13 @@
   },
   "lint-staged": {
     "src/**/*.{js,jsx}": [
-      "npm run lint", "npm run prettier", "git add"
+      "npm run lint",
+      "npm run prettier",
+      "git add"
     ],
     "src/**/*.scss": [
-      "stylelint --syntax scss --fix", "git add"
+      "stylelint --syntax scss --fix",
+      "git add"
     ]
   },
   "husky": {
