--- a/auth/package.json
+++ b/auth/package.json
@@ -11,7 +11,7 @@
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prepare": "husky install"
+    "prepare": "husky"
   },
   "repository": {
     "type": "git",
@@ -26,7 +26,8 @@
   "homepage": "https://github.com/c99rahul/ts-node-express#readme",
   "dependencies": {
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "git": "^0.1.5"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
@@ -42,9 +43,8 @@
     "supertest": "^6.3.4",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
+    "tsc-files": "^1.1.4",
     "typescript": "^5.3.3"
   },
-  "lint-staged": {
-    "*.js": "eslint --cache --fix"
-  }
+  "lint-staged": "lint-staged --config lint-staged.js"
 }
