--- a/auth/package.json
+++ b/auth/package.json
@@ -10,8 +10,12 @@
     "build": "npx tsc",
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "prepare": "husky"
+  },
+  "jest":{
+    "testEnvironment":"node",
+    "preset":"ts-jest"
   },
   "repository": {
     "type": "git",
@@ -31,7 +35,9 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.10.3",
+    "@types/supertest": "^6.0.2",
     "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript-prettier": "^5.0.0",
